changes completed. added service charges icons and styled all.

--- a/employes.html
+++ b/employes.html
@@ -309,8 +309,9 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a11.jpg" alt="" class="team-img" />
             <h3 class="team-name">Syed Karim Shah</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
