--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
             </div>
           </div>
         </div>
+
+        <div class="long-line-container">
+          <p class="lone-line-details">Rent - Sale - Purchase - Booking</p>
+        </div>
+      </div>
+
+      <div class="important-notice">
+        <div class="container">
+          <h2 class="section__title">Service Charges<span>.</span></h2>
+          <div class="notice-details-wrapper">
+            <div class="notice-details">
+              <span class="section__subtitle">- Rent Deal: </span>
+              <li>Commission: 1 month's rent</li>
+              <li>
+                Payable by: Both landlord and tenant (each pays 1 month's rent)
+              </li>
+            </div>
+            <div class="notice-details">
+              <span class="section__subtitle">- Sale Deal: </span>
+              <li>Commission: 1% of sale price</li>
+              <li>
+                Payable by: Both seller and buyer (each pays 1% of sale price)
+              </li>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- -----------------------------------sale------------------------------------------ -->
@@ -101,7 +127,7 @@
           <h2 class="section__title">Properties for Sale<span>.</span></h2>
 
           <div class="popular__container swiper">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper-container">
               <article class="popular__card swiper-slide">
                 <img src="images/home1.jpg" alt="" class="popular__img" />
                 <div class="popular__data">
@@ -153,13 +179,13 @@
       </section>
 
       <!-- -----------------------------------rent------------------------------------------ -->
-      <section class="popular section" id="popular">
+      <section class="popular section" id="popular2">
         <div class="container">
           <span class="section__subtitle">Rent</span>
           <h2 class="section__title">Properties for Rent<span>.</span></h2>
 
           <div class="popular__container swiper">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper-container">
               <article class="popular__card swiper-slide">
                 <img src="images/home1.jpg" alt="" class="popular__img" />
                 <div class="popular__data">
@@ -211,13 +237,13 @@
       </section>
 
       <!-- -----------------------------------Booking------------------------------------------ -->
-      <section class="popular section" id="popular">
+      <section class="popular section" id="popular3">
         <div class="container">
           <span class="section__subtitle">Booking</span>
           <h2 class="section__title">Projects for booking<span>.</span></h2>
 
           <div class="popular__container swiper">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper-container">
               <article class="popular__card swiper-slide">
                 <img src="images/home1.jpg" alt="" class="popular__img" />
                 <div class="popular__data">
@@ -395,7 +421,7 @@
       </section>
 
       <!------------------------------------ Our Events --------------------------------------------->
-      <section class="events section">
+      <section class="events section" id="events">
         <div class="container">
           <div class="events-wrapper">
             <div class="events-data">
@@ -585,7 +611,7 @@
                     <div class="reviews-content">
                       <p>
                         Selling my home with Chaudhry Estate was a smooth and
-                        efficient experience. Shazad’s expertise and clear
+                        efficient experience. Teams expertise and clear
                         communication made all the difference. They handled
                         everything with professionalism, making me feel
                         supported throughout.
@@ -627,10 +653,9 @@
                     <div class="reviews-content">
                       <p>
                         Chaudhry Estate helped me secure a fantastic investment
-                        property. Shazad’s market knowledge is top-notch, and
-                        his team made the entire process seamless. I’m thrilled
-                        with the outcome and look forward to working with them
-                        again
+                        property. Their market knowledge is top-notch, and the
+                        team made the entire process seamless. I’m thrilled with
+                        the outcome and look forward to working with them again
                       </p>
                       <div class="details">
                         <div class="imgbox">
@@ -648,10 +673,57 @@
                     <div class="reviews-content">
                       <p>
                         I couldn’t have asked for a better experience with
-                        Chaudhry Estate. Shazad truly listened to my needs and
+                        Chaudhry Estate. They truly listened to my needs and
                         found the perfect property for me. Their commitment and
                         care made all the difference. Highly recommend this
                         team!
+                      </p>
+                      <div class="details">
+                        <div class="imgbox">
+                          <img src="images/face2.jpg" alt="" />
+                        </div>
+                        <h3>Imran</h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="testimonialbox">
+                    <img src="images/right-quote.png" class="quote" alt="" />
+                    <div class="reviews-content">
+                      <p>
+                        I recently had the pleasure of working with Chaudhry
+                        Estate for my home buying journey, and I couldn't be
+                        happier with the service I received. The team was
+                        incredibly knowledgeable, patient, and dedicated to
+                        finding the perfect property that met all my needs. They
+                        took the time to understand my preferences and worked
+                        tirelessly to find the right match.
+                      </p>
+                      <div class="details">
+                        <div class="imgbox">
+                          <img src="images/face2.jpg" alt="" />
+                        </div>
+                        <h3>Imran</h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="testimonialbox">
+                    <img src="images/right-quote.png" class="quote" alt="" />
+                    <div class="reviews-content">
+                      <p>
+                        Chaudhry Estate exceeded all my expectations in selling
+                        my property. From the very beginning, their team
+                        demonstrated an exceptional level of expertise and
+                        customer care. They provided a comprehensive market
+                        analysis, helped me set a competitive price, and
+                        expertly marketed the property. The communication was
+                        always clear and timely, keeping me informed every step
+                        of the way.
                       </p>
                       <div class="details">
                         <div class="imgbox">
@@ -705,13 +777,13 @@
             <h3 class="footer__title">About</h3>
             <ul class="footer__links">
               <li>
-                <a href="#" class="footer__link">About Us</a>
+                <a href="#value" class="footer__link">About Us</a>
               </li>
               <li>
-                <a href="#" class="footer__link">Features</a>
+                <a href="#events" class="footer__link">Events</a>
               </li>
               <li>
-                <a href="#" class="footer__link">News & Blog</a>
+                <a href="employes.html" class="footer__link">Our Team</a>
               </li>
             </ul>
           </div>
@@ -720,28 +792,13 @@
             <h3 class="footer__title">Company</h3>
             <ul class="footer__links">
               <li>
-                <a href="#" class="footer__link">How we work?</a>
+                <a href="#popular" class="footer__link">How we work?</a>
               </li>
               <li>
-                <a href="#" class="footer__link">Capital</a>
+                <a href="#contact" class="footer__link">Contact Us</a>
               </li>
               <li>
-                <a href="#" class="footer__link">Security</a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <h3 class="footer__title">Support</h3>
-            <ul class="footer__links">
-              <li>
-                <a href="#" class="footer__link">FAQs</a>
-              </li>
-              <li>
-                <a href="#" class="footer__link">Support Center</a>
-              </li>
-              <li>
-                <a href="#" class="footer__link">Contact Us</a>
+                <a href="#views-section" class="footer__link">Testimonials</a>
               </li>
             </ul>
           </div>
@@ -750,14 +807,14 @@
             <h3 class="footer__title">Follow Us</h3>
             <ul class="footer__social">
               <a
-                href="https://www.facebook.com/"
+                href="https://www.facebook.com/Chaudhrybuilders?mibextid=ZbWKwL"
                 target="_blank"
                 class="footer__social-link"
               >
                 <i class="ri-facebook-circle-fill"></i>
               </a>
               <a
-                href="https://www.instagram.com/"
+                href="https://www.instagram.com/chaudhryestateandbuilders/"
                 target="_blank"
                 class="footer__social-link"
               >
@@ -769,6 +826,16 @@
                 class="footer__social-link"
               >
                 <img src="images/zameen.png" class="zameen" alt="" />
+              </a>
+              <a
+                href="https://www.youtube.com/@CHAUDHRYESTATEBUILDERS"
+                target="_blank"
+                class="footer__social-link"
+              >
+                <i class="ri-youtube-fill"></i>
+              </a>
+              <a href="#" target="_blank" class="footer__social-link">
+                <i class="ri-linkedin-box-fill"></i>
               </a>
             </ul>
           </div>
