sloving ui errors

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
           <div class="on-overlay">
             <div class="logo">
-              <img src="images/logo.jpg" />
+              <img src="images/logo2.jpg" />
             </div>
             <div class="hero-content">
               <p>
