changed the services chatrges section and changed rent purchase

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </div>
 
-      <div class="important-notice">
+      <!-- <div class="important-notice">
         <div class="container">
           <h2 class="section__title">Service Charges<span>.</span></h2>
           <div class="notice-details-wrapper">
@@ -118,7 +118,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- -----------------------------------sale------------------------------------------ -->
       <section class="popular section" id="popular">
@@ -336,17 +336,15 @@
               <div class="value__accordion-item">
                 <header class="value__accordion-header">
                   <i class="ri-shield-cross-fill value__accordion-icon"></i>
-                  <h3 class="value__accordion-title">
-                    Best negiotiable price rates in the market.
-                  </h3>
+                  <h3 class="value__accordion-title">Rent Deal</h3>
                   <div class="value__accordion-arrow">
                     <i class="ri-arrow-down-s-fill"></i>
                   </div>
                 </header>
                 <div class="value__accordion-content">
                   <p class="value__accordion-description">
-                    The price we provide is the best for you, Quality residence
-                    with affordable prices.
+                    Commission: 1 month's rent Payable by Both landlord and
+                    tenant (each pays 1 month's rent)
                   </p>
                 </div>
               </div>
@@ -357,18 +355,15 @@
                     icon="ph:x-square-fill"
                     class="value__accordion-icon"
                   ></iconify-icon>
-                  <h3 class="value__accordion-title">
-                    Prevent unstable prices
-                  </h3>
+                  <h3 class="value__accordion-title">Sale Deal</h3>
                   <div class="value__accordion-arrow">
                     <i class="ri-arrow-down-s-fill"></i>
                   </div>
                 </header>
                 <div class="value__accordion-content">
                   <p class="value__accordion-description">
-                    We have quiet the same stagnant price rates and these rates
-                    donot fluctuate as much. We try to keep the prices as
-                    reasonable as possible.
+                    Commission: 1% of sale price Payable by Both seller and
+                    buyer (each pays 1% of sale price)
                   </p>
                 </div>
               </div>
