added new pics and customized content

--- a/certificates.html
+++ b/certificates.html
@@ -84,6 +84,14 @@
           <p class="c-design">Zameen Expo 2020</p>
           <span><img src="certificates/9.jpg" /></span>
         </div>
+        <div class="image">
+          <p class="c-design">Olx Certificate</p>
+          <span><img src="certificates/10.jpg" /></span>
+        </div>
+        <div class="image">
+          <p class="c-design">Olx trusted agency</p>
+          <span><img src="certificates/11.jpg" /></span>
+        </div>
       </div>
     </div>
 
