--- a/employes.html
+++ b/employes.html
@@ -82,17 +82,19 @@
           </div>
           <div class="ceo-words-wrapper">
             <p class="ceo-words">
-              As the CEO of Chaudhry Estate, I take pride in guiding our clients
-              through every step of their real estate journey. With a deep
-              understanding of the market and a passion for property, I lead a
-              dedicated team focused on delivering personalized service and
-              expert advice. Whether you're looking to buy your dream home, sell
-              a property, or make a smart investment, we ensure that your
-              experience is seamless and rewarding. At Chaudhry Estate, we
-              believe in building lasting relationships and turning your real
-              estate aspirations into reality. Our commitment to integrity and
-              excellence is what sets us apart, and we're excited to help you
-              achieve your goals in the ever-evolving world of real estate.
+              Chaudhry Shahzad leads Chaudhry Estate and Builders with over 11
+              years of real estate expertise, driven by a passion for delivering
+              exceptional results and building lasting relationships. With
+              extensive knowledge of the market, particularly in Clifton, DHA,
+              and top housing societies like Ary Laguna, ASF, DHA City, and
+              Bahria Town, he expertly guides clients through every step of
+              their real estate journey. As CEO, Chaudhry Shahzad oversees a
+              dedicated team providing personalized service and expert advice
+              for buying, selling, and investing in properties. His commitment
+              to integrity, excellence, and client satisfaction sets him apart.
+              He is dedicated to making clients' real estate aspirations a
+              reality and helping them achieve their goals in the ever-evolving
+              world of real estate.
             </p>
           </div>
         </div>
@@ -102,7 +104,7 @@
     <!-- -----------------------------------MD------------------------------------------ -->
     <section class="popular section" id="popular">
       <div class="container">
-        <span class="section__subtitle">Our MD</span>
+        <span class="section__subtitle">Our Managing Director</span>
         <h2 class="section__title">Chaudhry Shahbaz<span>.</span></h2>
 
         <div class="ceo-container">
@@ -111,17 +113,20 @@
           </div>
           <div class="ceo-words-wrapper">
             <p class="ceo-words">
-              Chaudhry Shahbaz is the Managing Director of Chaudhry Estate, a
-              leading real estate agency based in Clifton, Karachi. With a keen
-              eye for property trends and a strong network in the industry, he
-              has been instrumental in driving the company's growth and success.
-              Chaudhry Shahbaz is known for his strategic decision-making,
-              exceptional leadership skills, and commitment to client
-              satisfaction. Under his guidance, Chaudhry Estate has successfully
-              handled numerous high-profile transactions, earning a reputation
-              for excellence in the market. His expertise in both residential
-              and commercial real estate makes him a trusted advisor for clients
-              seeking to make informed investment decisions.
+              Chaudhry Shahbaz is the visionary Managing Director of Chaudhry
+              Estate, a leading real estate agency in Clifton, Karachi. With 9
+              years of expertise in property investment, he has established
+              himself as a trusted authority in the field. His specialization in
+              high-growth societies, including ARY Laguna, ASF, DHA City, and
+              Bahria Town, has enabled him to drive the company's growth and
+              success. Through his strategic leadership and commitment to client
+              satisfaction, Chaudhry Shahbaz has led his team to execute
+              numerous high-profile transactions, earning a reputation for
+              excellence in the market. His expertise spans both residential and
+              commercial real estate, making him a sought-after advisor for
+              informed investment decisions. Under his guidance, Chaudhry Estate
+              continues to thrive, setting new standards in the real
+              estate industry.
             </p>
           </div>
         </div>
@@ -135,7 +140,7 @@
         <h2 class="section__title">Management Department <span>.</span></h2>
         <div class="team-container">
           <div class="team-details">
-            <img src="images/team4.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Ramaish B. Mana</h3>
             <p class="team-position">Team Led</p>
           </div>
@@ -155,20 +160,20 @@
         <h2 class="section__title">Our Sale/Rent Department<span>.</span></h2>
         <div class="team-container">
           <div class="team-details">
-            <img src="images/team3.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Sheraz</h3>
             <p class="team-position">Specialist</p>
             <p class="team-position">Sale/Rent</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Shahzaib</h3>
             <p class="team-position">Rent Specialist</p>
           </div>
 
           <div class="team-details">
-            <img src="images/team6.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Javed Amin</h3>
             <p class="team-position">Specialist</p>
             <p class="team-position">Sale/Rent</p>
@@ -182,20 +187,20 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Bankar Jeevan</h3>
             <p class="team-position">Specialist</p>
             <p class="team-position">Sale/Rent</p>
           </div>
 
           <div class="team-details">
-            <img src="images/team10.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Rafique Umer</h3>
             <p class="team-position">Rent Specialist</p>
           </div>
 
           <div class="team-details">
-            <img src="images/team9.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Zafar Chuhan</h3>
             <p class="team-position">Inventory Manager</p>
           </div>
@@ -238,7 +243,7 @@
 
         <div class="team-container">
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Muhammad Younis</h3>
             <p class="team-position">Office Boy</p>
           </div>
@@ -265,7 +270,7 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Govinda Ram</h3>
             <p class="team-position">Legal Department</p>
           </div>
@@ -309,7 +314,7 @@
           </div>
 
           <div class="team-details">
-            <img src="images/a11.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Syed Karim Shah</h3>
             <p class="team-position">Specialist Rent/Sale</p>
           </div>
@@ -321,13 +326,13 @@
           </div>
 
           <div class="team-details">
-            <img src="images/a9.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Mohsin Sheikh</h3>
             <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
-            <img src="images/a8.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Hafeez</h3>
             <p class="team-position">Specialist Rent/Sale</p>
           </div>
@@ -339,12 +344,12 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Noman Ahmed</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Mohsin Sheikh</h3>
           </div>
 
@@ -367,18 +372,13 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Mr. Austin</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Irfan Sheikh</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hameed Bharoch</h3>
           </div>
 
           <div class="team-details">
@@ -388,32 +388,32 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Gul Hassan</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Ghulam Rasool</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Muhammad Ali</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Jamshair</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Mohd Mehboob</h3>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/dummy.png" alt="" class="team-img" />
             <h3 class="team-name">Hameed Bharoch</h3>
           </div>
         </div>
