--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@
                 houses, we have an extensive portfolio of properties in Clifton
                 and DHA Karachi's most sought-after locations. Our services
                 include:
-                <span style="color: var(--second-color)">1.</span> Property
-                rentals <span style="color: var(--second-color)">2.</span> Sales
-                and purchases
-                <span style="color: var(--second-color)">3.</span> Property
-                valuations <span style="color: var(--second-color)">4.</span>
-                Investment advice
               </p>
+              <div style="margin-top: -2rem; margin-bottom: 2rem">
+                <li>Property rentals</li>
+                <li>Sales and purchases</li>
+                <li>Property valuations</li>
+                <li>Investment advice</li>
+              </div>
             </div>
 
             <!-- accordion started -->
@@ -517,11 +517,13 @@
                   <i class="ri-phone-fill"></i>
                   <div>
                     <h3 class="contact__card-title">Call</h3>
-                    <p class="contact__card-description">03353036639</p>
+                    <p class="contact__card-description">03331372497</p>
                   </div>
                 </div>
 
-                <button class="button contact__card-button">Call now</button>
+                <button class="button contact__card-button">
+                  <a href="https://wa.me/+923331372497">Call now</a>
+                </button>
               </div>
 
               <div class="contact__card-box">
@@ -529,11 +531,13 @@
                   <i class="ri-message-fill"></i>
                   <div>
                     <h3 class="contact__card-title">Chat</h3>
-                    <p class="contact__card-description">03353036639</p>
+                    <p class="contact__card-description">03331372497</p>
                   </div>
                 </div>
 
-                <button class="button contact__card-button">Chat Now</button>
+                <button class="button contact__card-button">
+                  <a href="https://wa.me/+923331372497">Chat Now</a>
+                </button>
               </div>
 
               <div class="contact__card-box">
@@ -557,12 +561,12 @@
                   <i class="ri-mail-unread-fill"></i>
                   <div>
                     <h3 class="contact__card-title">Message</h3>
-                    <p class="contact__card-description">03353036639</p>
+                    <p class="contact__card-description">03331372497</p>
                   </div>
                 </div>
 
                 <button class="button contact__card-button">
-                  <a href="contact.html"> Message Now </a>
+                  <a href="contact.html">Message Now </a>
                 </button>
               </div>
             </div>
