--- a/certificates.html
+++ b/certificates.html
@@ -37,11 +37,12 @@
           <li>
             <a href="index.html" class="nav__link">Home</a>
           </li>
+          <i class="ri-moon-line change-theme" id="theme-button"></i>
         </ul>
       </div>
     </header>
 
-    <div class="value__data">
+    <div class="value__data" style="margin-bottom: 6rem">
       <span class="section__subtitle">FBR registered</span>
       <h2 class="section__title">Our Certificates<span>.</span></h2>
     </div>
@@ -49,48 +50,50 @@
     <div class="wrapper">
       <div class="gallery">
         <div class="image">
-          <p class="c-design">Olx Certificate</p>
           <span><img src="certificates/1.jpg" /></span>
+          <p class="c-design">Olx Certificate of Appreciation</p>
         </div>
         <div class="image">
-          <p class="c-design">Registration Certificate</p>
           <span><img src="certificates/2.jpg" /></span>
+          <p class="c-design">FBR Certificate of Registration</p>
         </div>
         <div class="image">
-          <p class="c-design">Understanding Certificate</p>
           <span><img src="certificates/3.jpg" /></span>
+          <p class="c-design">Ilaan.com Certificate of Understanding</p>
         </div>
         <div class="image">
-          <p class="c-design">ASF Foundation</p>
           <span><img src="certificates/4.jpg" /></span>
+          <p class="c-design">ASF Certificate of Registration</p>
         </div>
         <div class="image">
-          <p class="c-design">Diamond Partner</p>
           <span><img src="certificates/5.jpg" /></span>
+          <p class="c-design">
+            Certificate of Partnership with Esskay Properties
+          </p>
         </div>
         <div class="image">
-          <p class="c-design">Chaudhry estate trophy</p>
           <span><img src="certificates/6.jpg" /></span>
+          <p class="c-design">Gifted by Zameen.com</p>
         </div>
         <div class="image">
-          <p class="c-design">Super League 2019</p>
           <span><img src="certificates/7.jpg" /></span>
+          <p class="c-design">8th Defclarea Super League</p>
         </div>
         <div class="image">
-          <p class="c-design">Super League 2022</p>
           <span><img src="certificates/8.jpg" /></span>
+          <p class="c-design">9th Defclarea Super League</p>
         </div>
         <div class="image">
-          <p class="c-design">Zameen Expo 2020</p>
           <span><img src="certificates/9.jpg" /></span>
+          <p class="c-design">Zameen Expo 2020</p>
         </div>
         <div class="image">
-          <p class="c-design">Olx Certificate</p>
           <span><img src="certificates/10.jpg" /></span>
+          <p class="c-design">Olx Expo 2020</p>
         </div>
         <div class="image">
-          <p class="c-design">Olx trusted agency</p>
           <span><img src="certificates/11.jpg" /></span>
+          <p class="c-design">Olx Certificate of Trusted Agency</p>
         </div>
       </div>
     </div>
@@ -119,5 +122,6 @@
     <div class="shadow"></div>
 
     <script src="certificate.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
