--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <!--------------------------------------------- navbar-------------------------------------- -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Chaudhry Estate & Builders</a>
+        <div class="nav-logo">
+          <img src="images/new-logo.jpg" alt="" />
+          <a href="#" class="nav__logo">Chaudhry Estate & Builders</a>
+        </div>
 
         <div class="nav__menu">
           <ul class="nav__list">
@@ -80,9 +83,6 @@
             <div class="overlay"></div>
           </div>
           <div class="on-overlay">
-            <div class="logo">
-              <img src="images/logo2.jpg" />
-            </div>
             <div class="hero-content">
               <p>
                 Discover Your
@@ -92,33 +92,46 @@
             </div>
           </div>
         </div>
-
-        <div class="long-line-container">
-          <p class="lone-line-details">Rent - Sale - Purchase - Booking</p>
-        </div>
       </div>
 
-      <!-- <div class="important-notice">
+      <!-- -----------------------------------Three boxes------------------------------------------ -->
+      <div class="boxes" id="boxes">
         <div class="container">
-          <h2 class="section__title">Service Charges<span>.</span></h2>
-          <div class="notice-details-wrapper">
-            <div class="notice-details">
-              <span class="section__subtitle">- Rent Deal: </span>
-              <li>Commission: 1 month's rent</li>
-              <li>
-                Payable by: Both landlord and tenant (each pays 1 month's rent)
-              </li>
+          <div class="boxes-wrapper">
+            <div class="boxes-container">
+              <div class="image">
+                <img src="images/boxes1.jpg" alt="" />
+              </div>
+              <div class="box-data">
+                <h2>Buy a property</h2>
+                <p>Find where “perfect” meets “happy”</p>
+              </div>
+              <a href="#" class="boxes-btn button">Browse Properties</a>
             </div>
-            <div class="notice-details">
-              <span class="section__subtitle">- Sale Deal: </span>
-              <li>Commission: 1% of sale price</li>
-              <li>
-                Payable by: Both seller and buyer (each pays 1% of sale price)
-              </li>
+
+            <div class="boxes-container">
+              <div class="image">
+                <img src="images/boxes2.jpg" alt="" />
+              </div>
+              <div class="box-data">
+                <h2>Sell a property</h2>
+                <p>Get the best value in any economy</p>
+              </div>
+            </div>
+
+            <div class="boxes-container">
+              <div class="image">
+                <img src="images/boxes3.jpg" alt="" />
+              </div>
+              <div class="box-data">
+                <h2>Rent a property</h2>
+                <p>Live where you can love</p>
+                <a href="#" class="boxes-btn button">Find Rentals</a>
+              </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- -----------------------------------sale------------------------------------------ -->
       <section class="popular section" id="popular">
@@ -763,12 +776,9 @@
 
     <footer class="footer section">
       <div class="footer__container container grid">
-        <div>
-          <img src="images/logo.jpg" class="logo-img" alt="" />
-          <p class="footer__description">
-            Our vision is to provide our people <br />
-            the best place to live.
-          </p>
+        <div class="footer-img">
+          <img src="images/new-logo.jpg" class="logo-img" alt="" />
+          <p class="footer__description">Chaudhry Estate & Builders</p>
         </div>
 
         <div class="footer__content">
