--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <h2>Sell a property</h2>
                 <p>Get the best value in any economy</p>
               </div>
+              <a href="#" class="boxes-btn button">Browse Properties</a>
             </div>
 
             <div class="boxes-container">
@@ -130,6 +131,17 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- -----------------------------------Companies------------------------------------------ -->
+      <div class="companies">
+        <div class="companies-wrapper">
+          <img src="images/c1.png" alt="" />
+          <img src="images/c2.png" alt="" />
+          <img src="images/c3.png" alt="" />
+          <img src="images/c4.png" alt="" />
+          <img src="images/c5.png" alt="" />
         </div>
       </div>
 
@@ -609,9 +621,9 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Abdullah</h3>
+                        <h3>Dr Naseem Ahmed</h3>
                       </div>
                     </div>
                   </div>
@@ -630,9 +642,9 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Ali</h3>
+                        <h3>Jagadesh Kumar</h3>
                       </div>
                     </div>
                   </div>
@@ -651,9 +663,9 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Khalid</h3>
+                        <h3>Dr Baksh Jammal</h3>
                       </div>
                     </div>
                   </div>
@@ -671,9 +683,9 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Umer</h3>
+                        <h3>Aamir Ahmed</h3>
                       </div>
                     </div>
                   </div>
@@ -692,9 +704,9 @@
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Imran</h3>
+                        <h3>Kishwar Yousafzai</h3>
                       </div>
                     </div>
                   </div>
@@ -709,15 +721,13 @@
                         Estate for my home buying journey, and I couldn't be
                         happier with the service I received. The team was
                         incredibly knowledgeable, patient, and dedicated to
-                        finding the perfect property that met all my needs. They
-                        took the time to understand my preferences and worked
-                        tirelessly to find the right match.
+                        finding the perfect property that met all my needs.
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Imran</h3>
+                        <h3>Najib Arshad </h3>
                       </div>
                     </div>
                   </div>
@@ -732,16 +742,13 @@
                         my property. From the very beginning, their team
                         demonstrated an exceptional level of expertise and
                         customer care. They provided a comprehensive market
-                        analysis, helped me set a competitive price, and
-                        expertly marketed the property. The communication was
-                        always clear and timely, keeping me informed every step
-                        of the way.
+                        analysis,
                       </p>
                       <div class="details">
                         <div class="imgbox">
-                          <img src="images/face2.jpg" alt="" />
+                          <img src="images/dummy.png" alt="" />
                         </div>
-                        <h3>Imran</h3>
+                        <h3>Valeed Ali</h3>
                       </div>
                     </div>
                   </div>
@@ -777,8 +784,8 @@
     <footer class="footer section">
       <div class="footer__container container grid">
         <div class="footer-img">
-          <img src="images/new-logo.jpg" class="logo-img" alt="" />
-          <p class="footer__description">Chaudhry Estate & Builders</p>
+          <img src="images/logo new.jpg" class="logo-img" alt="" />
+          <!-- <p class="footer__description">Chaudhry Estate & Builders</p> -->
         </div>
 
         <div class="footer__content">
