--- a/employes.html
+++ b/employes.html
@@ -419,12 +419,9 @@
 
     <footer class="footer section">
       <div class="footer__container container grid">
-        <div>
-          <img src="images/logo.jpg" class="logo-img" alt="" />
-          <p class="footer__description">
-            Our vision is to provide our people <br />
-            the best place to live.
-          </p>
+        <div class="footer-img">
+          <img src="images/logo new blue.png" class="logo-img" alt="" />
+          <!-- <p class="footer__description">Chaudhry Estate & Builders</p> -->
         </div>
 
         <div class="footer__content">
@@ -432,13 +429,13 @@
             <h3 class="footer__title">About</h3>
             <ul class="footer__links">
               <li>
-                <a href="#" class="footer__link">About Us</a>
+                <a href="#value" class="footer__link">About Us</a>
               </li>
               <li>
-                <a href="#" class="footer__link">Features</a>
+                <a href="#events" class="footer__link">Events</a>
               </li>
               <li>
-                <a href="#" class="footer__link">News & Blog</a>
+                <a href="employes.html" class="footer__link">Our Team</a>
               </li>
             </ul>
           </div>
@@ -447,28 +444,13 @@
             <h3 class="footer__title">Company</h3>
             <ul class="footer__links">
               <li>
-                <a href="#" class="footer__link">How we work?</a>
+                <a href="#popular" class="footer__link">How we work?</a>
               </li>
               <li>
-                <a href="#" class="footer__link">Capital</a>
+                <a href="#contact" class="footer__link">Contact Us</a>
               </li>
               <li>
-                <a href="#" class="footer__link">Security</a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <h3 class="footer__title">Support</h3>
-            <ul class="footer__links">
-              <li>
-                <a href="#" class="footer__link">FAQs</a>
-              </li>
-              <li>
-                <a href="#" class="footer__link">Support Center</a>
-              </li>
-              <li>
-                <a href="#" class="footer__link">Contact Us</a>
+                <a href="#views-section" class="footer__link">Testimonials</a>
               </li>
             </ul>
           </div>
@@ -477,14 +459,14 @@
             <h3 class="footer__title">Follow Us</h3>
             <ul class="footer__social">
               <a
-                href="https://www.facebook.com/"
+                href="https://www.facebook.com/Chaudhrybuilders?mibextid=ZbWKwL"
                 target="_blank"
                 class="footer__social-link"
               >
                 <i class="ri-facebook-circle-fill"></i>
               </a>
               <a
-                href="https://www.instagram.com/"
+                href="https://www.instagram.com/chaudhryestateandbuilders/"
                 target="_blank"
                 class="footer__social-link"
               >
@@ -497,13 +479,25 @@
               >
                 <img src="images/zameen.png" class="zameen" alt="" />
               </a>
+              <a
+                href="https://www.youtube.com/@CHAUDHRYESTATEBUILDERS"
+                target="_blank"
+                class="footer__social-link"
+              >
+                <i class="ri-youtube-fill"></i>
+              </a>
+              <a href="#" target="_blank" class="footer__social-link">
+                <i class="ri-linkedin-box-fill"></i>
+              </a>
             </ul>
           </div>
         </div>
       </div>
 
       <div class="footer__info container">
-        <span class="footer__copy"> &#169; Realtors. All rights reserved </span>
+        <span class="footer__copy">
+          &#169; Chaudhry Estate. All rights reserved
+        </span>
 
         <div class="footer__privacy">
           <a href="#">Terms & Agreements</a>
