--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
     <footer class="footer section">
       <div class="footer__container container grid">
         <div class="footer-img">
-          <img src="images/logo new.jpg" class="logo-img" alt="" />
+          <img src="images/logo new blue.png" class="logo-img" alt="" />
           <!-- <p class="footer__description">Chaudhry Estate & Builders</p> -->
         </div>
 
